--- a/EnglishBySubtitle.Mvc/appsettings.json
+++ b/EnglishBySubtitle.Mvc/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MyConfigValue": "Это значение из appsettings.json"
 }
