Corrected the comments

--- a/EnglishBySubtitle.Mvc/appsettings.json
+++ b/EnglishBySubtitle.Mvc/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "MyConfigValue": "Это значение из appsettings.json"
+  "MyConfigValue": "This value is from appsettings.json."
 }
